@@ -1,3 +1,8 @@
+2011-11-22 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
+
+	* lwjgl-2.8.2-1 :
+	Simple version bump.
+
 2011-10-29 Frederik "Freso" S. Olesen <freso.dk@gmail.com>
 
 	* lwjgl-2.8.1-1 :
